styles/globals.css
.bebas-neue-regular {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-style: normal;
}

html,
body {
  background-color: #f8fafc;
  background-color: #84443e;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  color: #f0e2e3;
}

* {
  box-sizing: border-box;
}

main {
  /* padding: 5rem 0; */
  flex: 1;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: left;
  width: 95%;
  /* text-align: left; */
}

mainaudio {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: left;
  width: 100%;
}

.hero{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* align-items: center; */
  text-align: center;
  /* margin-top: 1rem; */
}
.hero img {
  width: 60%;
  max-height: 50vw;
  /* height: 50%; */
  object-fit: cover;
  justify-self: center;
  align-self: start;
  /* align-self: flex-start; */
  /* object-fit: cover; */
}

.tube{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  /* align-items: center; */
  text-align: center;
}


.tube iframe {
    border: none;
    object-fit: contain;
    width: 100vw;
    height: auto;
    aspect-ratio: 16 / 9;
}

.links {
  color: #0070f3;
  text-decoration: none;
  font-weight: bold;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 1.5rem;
  margin-top: 0;
  flex-direction: column;
}

.description {
  color: #f0e2e3;
  font-size: clamp(0.5rem, 2.5vw, 1.5rem);
  line-height: 1.25;
  font-weight: normal;
  text-align: left;
  /* margin-block: 0; */
  width: 90%;
  align-self: center;
  justify-self: center;
}

.toAudio{
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1.5rem;
  margin-top: 0;
  flex-direction: column;
  width: 100%;
}

.links a{
  font-size: clamp(0.25rem, 2.5vw, 4rem);
  font-family: "Bebas Neue", sans-serif;
  letter-spacing: 4px;
  /* line-height: 2.5rem; */
  font-weight: normal;
  background-color: #67858a;
  padding: 0.5rem;
  border-radius: 5px;
  margin-bottom: 1.5rem;
  /* align-items: right; */
  font-style: unset;
  text-decoration: none;
  width: 90%;
  color: white;
}

.links a:hover{
  background-color: #f8fafc;
  color:  #67858a !important;
  text-decoration: none;
}

.links a:visited{
  color: white;
  text-decoration: none;
}

.info{
  display: flex;
  flex-direction: column;
  justify-content: right;
  align-items: right;
  padding: 1rem;
  width: 50%;
  text-align: left;
  align-self: end;
}

.info h5, .info h3{ 
  font-size: clamp(0.5rem, 2.5vw, 1.5rem);
  font-family: "Bebas Neue", sans-serif;
  letter-spacing: 2px;
  margin: 0;
  padding: 0;
  text-align: left;
  display: inline;
  width: 100%;
}

.info p{
  font-size: clamp(0.5rem, 2vw, 1.5rem);
  line-height: 1.25;
}

code {
  background: #e2e8f0;
  border-radius: 5px;
  padding: 0.75rem;
  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
}

.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}




@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2), 
only screen and (max-width: 600px) and (min-resolution: 192dpi) {
  /* Styles for high-density displays */
  body {
    font-size: 16px;
  }
  .description {
    font-size: 0.75rem;
  }

  .info{
    width: 100%;
  }

}

@media only screen and (max-width: 600px) {
  /* Styles for phones */
  body {
    font-size: 16px; /* Adjust font size */
  }

  .description {
    font-size: 0.75rem;
  }

  .info{
    width: 100%;
  }
}

